# TaskImGui

./: .gitignore  App.cpp  README.md  TaskImGui.sln  TaskImGui.vcxproj  TaskImGui.vcxproj.filters  dd.txt  imgui.ini  main.cpp
Libraries/lib/: glfw3.lib
backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl3.h
imgui/: imgui_impl_glfw.h
lib/: App.cpp  imgui_impl_glfw.cpp
src/: App.cpp  CMakeLists.txt  Makefile  TaskImGui  example_glfw_opengl3  imgui.ini  main.cpp
x64/Debug/: TaskImGui.exe.recipe  TaskImGui.vcxproj.FileListAbsolute.txt  imgui.ini  vc143.idb
x64/Debug/TaskImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TaskImGui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: TaskImGui.exe.recipe  TaskImGui.ipdb  TaskImGui.vcxproj.FileListAbsolute.txt  imgui.ini
x64/Release/TaskImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TaskImGui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
